# symbinux

./: .gitignore  CHANGELOG.it.md  CHANGELOG.md  Cargo.toml  README.it.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/logo/: README.md
crates/symbinux-cli/: Cargo.toml
crates/symbinux-cli/src/: config.rs  main.rs
crates/symbinux-devices/: Cargo.toml
crates/symbinux-devices/src/: device.rs  enumerate.rs  fingerprint.rs  handler.rs  handlers.rs  lib.rs  manager.rs
crates/symbinux-gui/: Cargo.toml
crates/symbinux-gui/src/: i18n.rs  main.rs
crates/symbinux-protocol/: Cargo.toml
crates/symbinux-protocol/src/: checksum.rs  decode.rs  fbus2.rs  lib.rs  mbus.rs  message.rs
crates/symbinux-protocol/tests/: frames.rs
crates/symbinux-transport/: Cargo.toml
crates/symbinux-transport/src/: enumerate.rs  lib.rs  ports.rs  serial.rs  usb.rs
crates/symbinux-wireless/: Cargo.toml
crates/symbinux-wireless/examples/: scan-bluetooth.rs
crates/symbinux-wireless/src/: ble.rs  classify.rs  exec.rs  lib.rs  linux.rs
data/: devices.json
docs/: ANDROID_IOS_PLAN.md  COMPARISON.md  CONNECTION_MODEL.md  CROSS_PLATFORM.md  CROSS_PLATFORM_GUI_PLAN.md  DBUS_SERVICE_PLAN.md  DEVICE_DETECTION.md  FUNCTIONS.it.md  FUNCTIONS.md  NOKIA_SERVICE_MODES.md  NUSB_MIGRATION_STUDY.md  PROTOCOL_NOTES.md  ROADMAP.it.md  ROADMAP.md  SETUP.it.md  SETUP.md  VANILLA_CONNECTIVITY.md
packaging/flatpak/: it.davidebr90.Symbinux.desktop  it.davidebr90.Symbinux.metainfo.xml  it.davidebr90.Symbinux.yml
packaging/windows/: README.md  build-gui.bat  make-dist.sh  symbinux.iss
po/: LINGUAS  README.md  compile.sh  de.po  es.po  fr.po  it.po  ja.po  nl.po  pl.po  pt.po  ru.po  symbinux.pot  zh_CN.po
src/symbinux/: __init__.py
src/symbinux/core/: __init__.py  bluetooth.py  cli.py  devices.py
src/symbinux/gui/: __init__.py  backend.py  i18n.py  main.py  settings.py  theme.py  widgets.py  window.py
src/symbinux/locale/de/LC_MESSAGES/: symbinux.mo
src/symbinux/locale/es/LC_MESSAGES/: symbinux.mo
src/symbinux/locale/fr/LC_MESSAGES/: symbinux.mo
src/symbinux/locale/it/LC_MESSAGES/: symbinux.mo
src/symbinux/locale/ja/LC_MESSAGES/: symbinux.mo
src/symbinux/locale/nl/LC_MESSAGES/: symbinux.mo
src/symbinux/locale/pl/LC_MESSAGES/: symbinux.mo
src/symbinux/locale/pt/LC_MESSAGES/: symbinux.mo
src/symbinux/locale/ru/LC_MESSAGES/: symbinux.mo
src/symbinux/locale/zh_CN/LC_MESSAGES/: symbinux.mo
tests/: test_backend.py  test_devices.py
udev/: 51-android.rules  69-nokia-legacy.rules  README.md
