[workspace]
resolver = "2"
members = [
    "crates/symbinux-protocol",
    "crates/symbinux-transport",
    "crates/symbinux-devices",
    "crates/symbinux-wireless",
    "crates/symbinux-cli",
    "crates/symbinux-gui",
]
# The GUI needs the GTK4 dev libraries, so it is excluded from the default set:
# a plain `cargo build` (core + CLI) works without GTK; `cargo build --workspace`
# (used by CI, which installs libgtk-4-dev) additionally builds the GUI.
default-members = [
    "crates/symbinux-protocol",
    "crates/symbinux-transport",
    "crates/symbinux-devices",
    "crates/symbinux-wireless",
    "crates/symbinux-cli",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.74"
license = "AGPL-3.0-or-later"
repository = "https://github.com/davidebr90/symbinux"
authors = ["Davide Pica"]

[workspace.dependencies]
symbinux-protocol = { path = "crates/symbinux-protocol" }
symbinux-transport = { path = "crates/symbinux-transport" }
symbinux-devices = { path = "crates/symbinux-devices" }
symbinux-wireless = { path = "crates/symbinux-wireless" }
thiserror = "1"
log = "0.4"
