[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "symbinux"
version = "0.2.0"
description = "GTK front-end for the Symbinux Nokia FBUS/MBUS toolkit"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [
    { name = "Davide Pica" },
]

# The GUI drives the Rust core (`symbinux-fbus`) via subprocess; it has no
# Python protocol or USB dependencies of its own.
dependencies = []

[project.optional-dependencies]
gui = [
    "PyGObject>=3.48; sys_platform == 'linux'",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
symbinux = "symbinux.gui.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
