[package]
name = "symbinux-cli"
description = "Command-line tool to talk to legacy Nokia phones over FBUS/MBUS"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
symbinux-protocol.workspace = true
symbinux-transport.workspace = true
symbinux-devices.workspace = true
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log.workspace = true
env_logger = "0.11"

[[bin]]
name = "symbinux-fbus"
path = "src/main.rs"
