[package]
name = "symbinux-devices"
description = "USB device auto-detection and per-platform dispatch (Nokia/Android/iOS)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
symbinux-protocol.workspace = true
symbinux-transport.workspace = true
thiserror.workspace = true
log.workspace = true
nusb = "0.2"

[lib]
name = "symbinux_devices"
