[package]
name = "symbinux-gui"
description = "GTK4 (gtk4-rs) desktop GUI for Symbinux — links the Rust core directly"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde_json = "1"
symbinux-devices.workspace = true
symbinux-protocol.workspace = true
symbinux-transport.workspace = true
gtk4 = "0.9"

[[bin]]
name = "symbinux-gui"
path = "src/main.rs"
