[package]
name = "symbinux-protocol"
description = "Clean-room FBUS/MBUS frame encoder/decoder for legacy Nokia phones"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true

[lib]
name = "symbinux_protocol"
